--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,27 +30,26 @@ dependencies:
   community_material_icon: ^5.9.55
   flutter:
     sdk: flutter
-  auto_size_text: ^3.0.0
-  flutter_secure_storage: ^3.3.1+1
-  cupertino_icons: ^1.0.2
-  google_fonts: ^2.0.0
-  flutter_bloc: ^7.0.0
-  font_awesome_flutter: ^9.0.0
-  get_it: ^6.0.0
-  http: ^0.13.0
+  auto_size_text:
+  cached_network_image: ^3.1.0
+  equatable: ^2.0.0
+  font_awesome_flutter:
+  google_fonts: ^2.1.0
   intl: ^0.17.0
-  json_path: ^0.3.1
-  location: ^4.2.0
-  url_launcher: ^6.0.7
-  page_transition: ^2.0.4
+  json_path: ^0.3.0
+  page_transition:
+  timeago:
+  url_launcher:
+  get_it: ^6.0.0
+  flutter_bloc: ^7.0.0
   shared_preferences: ^2.0.5
-  flutter_barcode_scanner: ^2.0.0
-  dropdown_search: ^0.6.3
-  timeago: ^3.1.0
-  latlng: any
-
-    # per l'esempio bloc
+  uuid: 3.0.5
+  date_time_picker: ^2.1.0
+  easy_debounce: 2.0.1
+  currency_text_input_formatter: ^2.1.5
   fl_chart: ^0.36.2
+    # per l'esempio bloc
+
 
 dev_dependencies:
   flutter_launcher_icons: 0.9.2
