--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
     sdk: flutter
   auto_size_text:
   cached_network_image: ^3.1.0
-  equatable: ^2.0.0
+  equatable: ^2.0.3
   font_awesome_flutter:
   google_fonts: ^2.1.0
   intl: ^0.17.0
@@ -42,14 +42,13 @@ dependencies:
   page_transition:
   timeago:
   url_launcher:
-  get_it: ^6.0.0
-  flutter_bloc: ^7.0.0
+  get_it: ^7.2.0
+  flutter_bloc: ^8.0.1
   shared_preferences: ^2.0.5
   uuid: 3.0.5
   date_time_picker: ^2.1.0
-  easy_debounce: 2.0.1
+  easy_debounce: ^2.0.2+1
   currency_text_input_formatter: ^2.1.5
-  fl_chart: ^0.36.2
     # per l'esempio bloc
 
 
