--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,9 +41,9 @@ dependencies:
   json_path: ^0.3.0
   page_transition:
   timeago:
-  url_launcher:
+  url_launcher: ^6.0.7
   get_it: ^7.2.0
-  flutter_bloc: ^8.0.1
+  flutter_bloc: ^7.0.0
   shared_preferences: ^2.0.5
   uuid: 3.0.5
   date_time_picker: ^2.1.0
