--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,6 +85,6 @@ flutter:
   assets:
     - images/
 flutter_icons:
-  image_path: "images/logo-deltacall-check.png"
+  image_path: "images/Logo.png"
   android: "launcher_icon"
   ios: true
